<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddUserActivity" >

   <TextView
        android:id="@+id/NameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/contact_name_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/numberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NameTitle"
        android:layout_below="@+id/NameTitle"
        android:layout_marginTop="15dp"
        android:text="@string/contact_mobile_number_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numberTitle"
        android:layout_below="@+id/numberTitle"
        android:layout_marginTop="15dp"
        android:text="@string/contact_email_address_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/addressOneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailTitle"
        android:layout_below="@+id/emailTitle"
        android:layout_marginTop="15dp"
        android:text="@string/contact_address_line_one_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/addressTwoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressOneTitle"
        android:layout_below="@+id/addressOneTitle"
        android:layout_marginTop="15dp"
        android:text="@string/contact_address_line_two_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/countyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressTwoTitle"
        android:layout_below="@+id/addressTwoTitle"
        android:layout_marginTop="16dp"
        android:text="@string/contact_address_county_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/postcodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/countyTitle"
        android:layout_below="@+id/countyTitle"
        android:layout_marginTop="16dp"
        android:text="@string/contact_address_postcode_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/postcodeTitle"
        android:layout_below="@+id/postcodeTitle"
        android:layout_marginTop="16dp"
        android:text="@string/contact_DOB_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/name_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/NameTitle"
        android:layout_alignBottom="@+id/NameTitle"
        android:layout_toRightOf="@+id/addressOneTitle"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/mobile_number_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numberTitle"
        android:layout_alignBottom="@+id/numberTitle"
        android:layout_toRightOf="@+id/numberTitle"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_address_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailTitle"
        android:layout_alignBottom="@+id/emailTitle"
        android:layout_alignLeft="@+id/name_textfield"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/address_one_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addressOneTitle"
        android:layout_alignBottom="@+id/addressOneTitle"
        android:layout_alignLeft="@+id/email_address_textfield"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/address_two_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addressTwoTitle"
        android:layout_alignBottom="@+id/addressTwoTitle"
        android:layout_alignLeft="@+id/address_one_textfield"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/county_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/countyTitle"
        android:layout_alignBottom="@+id/countyTitle"
        android:layout_alignLeft="@+id/address_two_textfield"
        android:inputType= "text"
        android:ems="10" />

    <EditText
        android:id="@+id/postcode_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/postcodeTitle"
        android:layout_alignBottom="@+id/postcodeTitle"
        android:layout_alignLeft="@+id/county_textfield"
        android:inputType= "text"
        android:ems="10" />

    <EditText
        android:id="@+id/dob_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dobTitle"
        android:layout_alignBottom="@+id/dobTitle"
        android:layout_alignLeft="@+id/postcode_textfield"
        android:text="@string/age_format"
        android:inputType= "date"
        android:ems="10" />

    <TextView
        android:id="@+id/extraTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dobTitle"
        android:layout_below="@+id/dob_textfield"
        android:layout_marginTop="16dp"
        android:text="@string/contact_extra_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/extra_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/extraTitle"
        android:layout_alignBottom="@+id/extraTitle"
        android:layout_alignLeft="@+id/mobile_number_textfield"
        android:inputType= "text"
        android:ems="10" />

</RelativeLayout>
